testsuite/poke.pkl/int-struct-type-diag-14.pk
/* { dg-do compile } */

type Foo =
  struct string /* { dg-error "integral" } */
  {
  };
